Routing is working!

--- a/src/app/layout/main-navigation/main-navigation.component.html
+++ b/src/app/layout/main-navigation/main-navigation.component.html
@@ -2,9 +2,9 @@
   <div class="logo">React Meetups</div>
   <nav>
     <ul>
-      <li><a href="#">All Meetups</a></li>
-      <li><a href="#">New Meetup</a></li>
-      <li><a href="#">My Favorites</a></li>
+      <li><a routerLink="/">All Meetups</a></li>
+      <li><a routerLink="/new-meetup">New Meetup</a></li>
+      <li><a routerLink="/favorites">My Favorites</a></li>
     </ul>
   </nav>
 </header>
