Show all meetings

--- a/src/app/layout/main-navigation/main-navigation.component.html
+++ b/src/app/layout/main-navigation/main-navigation.component.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <div class="logo">React Meetups</div>
+  <div class="logo">Angular Meetups</div>
   <nav>
     <ul>
       <li><a routerLink="/">All Meetups</a></li>
