--- a/src/app/meetups/meetup-item/meetup-item.component.html
+++ b/src/app/meetups/meetup-item/meetup-item.component.html
@@ -1,15 +1,12 @@
 <li class="item">
   <app-card>
     <div class="image">
-      <img
-        src="https://1000logos.net/wp-content/uploads/2021/05/Meetup-logo.png"
-        alt="Meetup Image"
-      />
+      <img [src]="meetup.image" alt="Meetup Image" />
     </div>
     <div class="content">
-      <h3>Meetup Título</h3>
-      <address>Endereço Meetup</address>
-      <p>Meetup Description</p>
+      <h3>{{ meetup.title }}</h3>
+      <address>{{ meetup.address }}</address>
+      <p>{{ meetup.description }}</p>
     </div>
     <div class="actions">
       <button>Add to favorites</button>
