Gets all the meetups on AllMeetups component

--- a/src/app/meetups/meetup-list/meetup-list.component.html
+++ b/src/app/meetups/meetup-list/meetup-list.component.html
@@ -1,3 +1,3 @@
 <ul class="list">
-  <app-meetup-item *ngFor="let meetup of meetups$ | async" [meetup]="meetup" />
+  <app-meetup-item *ngFor="let meetup of meetups" [meetup]="meetup" />
 </ul>
